--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(generate_normal_data)
 export(get_optimizer_name_as_string)
 export(layer_combined_L1)
 export(layer_combined_L2)
+export(layer_combined_no_restrictions)
 export(rename_coeffs_from_polyreg)
 export(scale_data)
 importFrom(magrittr,"%>%")
