--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: nn2poly.tools
-Title: What the Package Does (One Line, Title Case)
+Title: Auxiliar package to the `nn2poly` package. Implements custom layers using `keras`and `tensorflow`that impose the needed restrictions in the weight norms to ensure a good performance of the NN2Poly method. 
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "First",
